Spé Koesio : partial rewriting of the Loan module  - do the math in one place using functions from the MathPHP lib  - support installments in arrear as well as in advance  - support global future value of the loan  - more accurate handling of manual installments  - minor UX improvements (transient highlighting of recomputed schedule lines)  - major bug fixes (e.g. orphaned payment schedule when loan deleted)  - javascript and css moved out of the php files  - more consistent namings But also some problems not fixed / some missed improvement opportunities

--- a/htdocs/langs/en_US/loan.lang
+++ b/htdocs/langs/en_US/loan.lang
@@ -9,20 +9,29 @@ ShowLoanPayment=Show Loan Payment
 LoanCapital=Capital
 Insurance=Insurance
 Interest=Interest
-Nbterms=Number of terms
-Term=Term
-LoanAccountancyCapitalCode=Accounting account capital
-LoanAccountancyInsuranceCode=Accounting account insurance
-LoanAccountancyInterestCode=Accounting account interest
+NbPeriods=Number of installments
+Periodicity=Periodicity (interval between installments in months, duration of a period)
+DateComputedFromNbPeriods=Computed from number of installments and periodicity
+CalcMode=Calculation mode
+CalcInArrear=In arrear
+CalcInAdvance=In advance
+Term=Period
+LoanAccountancyCapitalCode=Accounting account for capital
+LoanAccountancyInsuranceCode=Accounting account for insurance
+LoanAccountancyInterestCode=Accounting account for interest
 ConfirmDeleteLoan=Confirm deleting this loan
 LoanDeleted=Loan Deleted Successfully
-ConfirmPayLoan=Confirm classify paid this loan
+ConfirmPayLoan=Confirm set this loan as paid
 LoanPaid=Loan Paid
-ListLoanAssociatedProject=List of loan associated with the project
+ListLoanAssociatedProject=List of loans associated with the project
 AddLoan=Create loan
 FinancialCommitment=Financial commitment
 InterestAmount=Interest
-CapitalRemain=Capital remain
+CapitalRemain=Capital remaining
+AmountsAreInCurrency=Unless stated otherwise, amounts are in %s.
+Principal=Principal
+ScheduleSaved=Payment schedule saved
+ConfirmResetSchedule=⚠ If you proceed, the loan schedule will have to be reset (deleted). Confirm?
 TermPaidAllreadyPaid = This term is allready paid
 CantUseScheduleWithLoanStartedToPaid = Can't generate a timeline for a loan with a payment started
 CantModifyInterestIfScheduleIsUsed = You can't modify interest if you use schedule
