--- a/htdocs/langs/fr_FR/loan.lang
+++ b/htdocs/langs/fr_FR/loan.lang
@@ -2,14 +2,19 @@
 Loan=Emprunt
 Loans=Emprunts
 NewLoan=Nouvel emprunt
-ShowLoan=Montrer emprunt
+ShowLoan=Afficher emprunt
 PaymentLoan=Paiement emprunt
 LoanPayment=Paiement du prêt
-ShowLoanPayment=Montrer paiement de l'emprunt
+ShowLoanPayment=Afficher paiement de l'emprunt
 LoanCapital=Capital
 Insurance=Assurance
 Interest=Intérêt
-Nbterms=Nombre de termes
+NbPeriods=Nombre de termes
+Periodicity=Périodicité (nombre de mois par période d'échéance)
+DateComputedFromNbPeriods=Calculée en fonction du nombre de termes et de la périodicité
+CalcMode=Mode de calcul
+CalcInArrear=Au terme échu (intérêt post-compté)
+CalcInAdvance=Au terme à échoir (intérêt pré-compté)
 Term=Terme
 LoanAccountancyCapitalCode=Compte comptable capital
 LoanAccountancyInsuranceCode=Compte comptable assurance
@@ -23,6 +28,10 @@ AddLoan=Créer prêt
 FinancialCommitment=Echéancier
 InterestAmount=Intérêt
 CapitalRemain=Capital restant
+AmountsAreInCurrency=Sauf indication contraire, les montants sont exprimés en %s.
+Principal=Amortissement
+ScheduleSaved=Échéancier enregistré
+ConfirmResetSchedule=⚠ Si vous continuez, il faudra remettre à zéro l'échéancier (le supprimer). Continuer ?
 TermPaidAllreadyPaid = Ce terme est déjà payé
 CantUseScheduleWithLoanStartedToPaid = Impossible de générer un échéancier pour un prêt avec un paiement commencé
 CantModifyInterestIfScheduleIsUsed = Vous ne pouvez pas modifier l'intérêt si vous utilisez le calendrier
