Spé Koesio : Fix Loan: - saved schedule lines not displayed - basic help tooltips on create/update form

--- a/htdocs/langs/en_US/loan.lang
+++ b/htdocs/langs/en_US/loan.lang
@@ -10,11 +10,14 @@ LoanCapital=Capital
 Insurance=Insurance
 Interest=Interest
 NbPeriods=Number of installments
-Periodicity=Periodicity (interval between installments in months, duration of a period)
+Periodicity=Periodicity
+PeriodicityHelp=Interval between installments (internally stored in months)
 DateComputedFromNbPeriods=Computed from number of installments and periodicity
 CalcMode=Calculation mode
 CalcInArrear=In arrear
 CalcInAdvance=In advance
+CalcInArrearHelp=Interests of individual payments are computed with reference to the previous period
+CalcInAdvanceHelp=Interests of individual payments are computed with reference to the next period
 Term=Period
 LoanAccountancyCapitalCode=Accounting account for capital
 LoanAccountancyInsuranceCode=Accounting account for insurance
@@ -32,6 +35,10 @@ AmountsAreInCurrency=Unless stated otherwise, amounts are in %s.
 Principal=Principal
 ScheduleSaved=Payment schedule saved
 ConfirmResetSchedule=⚠ If you proceed, the loan schedule will have to be reset (deleted). Confirm?
+InterestRate=Interest rate
+InterestRateHelp=Yearly proportional interest rate
+YearlyRate=Yearly proportional interest rate
+PeriodicRate=Periodic interest rate
 TermPaidAllreadyPaid = This term is allready paid
 CantUseScheduleWithLoanStartedToPaid = Can't generate a timeline for a loan with a payment started
 CantModifyInterestIfScheduleIsUsed = You can't modify interest if you use schedule
