--- a/htdocs/langs/fr_FR/loan.lang
+++ b/htdocs/langs/fr_FR/loan.lang
@@ -5,16 +5,19 @@ NewLoan=Nouvel emprunt
 ShowLoan=Afficher emprunt
 PaymentLoan=Paiement emprunt
 LoanPayment=Paiement du prêt
-ShowLoanPayment=Afficher paiement de l'emprunt
+ShowLoanPayment=Montrer paiement de l'emprunt
 LoanCapital=Capital
 Insurance=Assurance
 Interest=Intérêt
 NbPeriods=Nombre de termes
-Periodicity=Périodicité (nombre de mois par période d'échéance)
+Periodicity=Périodicité
+PeriodicityHelp=Intervalle de temps entre deux échéances (stocké en nombre de mois)
 DateComputedFromNbPeriods=Calculée en fonction du nombre de termes et de la périodicité
 CalcMode=Mode de calcul
-CalcInArrear=Au terme échu (intérêt post-compté)
-CalcInAdvance=Au terme à échoir (intérêt pré-compté)
+CalcInArrear=Au terme échu
+CalcInAdvance=Au terme à échoir
+CalcInArrearHelp=Le calcul des intérêts d’une échéance se rapporte à la période qui précède (intérêt post-compté)
+CalcInAdvanceHelp=Le calcul des intérêts d’une échéance se rapporte à la période qui suit (intérêt pré-compté)
 Term=Terme
 LoanAccountancyCapitalCode=Compte comptable capital
 LoanAccountancyInsuranceCode=Compte comptable assurance
@@ -32,9 +35,14 @@ AmountsAreInCurrency=Sauf indication contraire, les montants sont exprimés en %
 Principal=Amortissement
 ScheduleSaved=Échéancier enregistré
 ConfirmResetSchedule=⚠ Si vous continuez, il faudra remettre à zéro l'échéancier (le supprimer). Continuer ?
+InterestRate=Taux
+InterestRateHelp=Taux d'intérêt proportionnel annuel
+YearlyRate=Taux d'intérêt proportionnel annuel
+PeriodicRate=Taux d'intérêt périodique
 TermPaidAllreadyPaid = Ce terme est déjà payé
 CantUseScheduleWithLoanStartedToPaid = Impossible de générer un échéancier pour un prêt avec un paiement commencé
 CantModifyInterestIfScheduleIsUsed = Vous ne pouvez pas modifier l'intérêt si vous utilisez le calendrier
+
 # Admin
 ConfigLoan=Configuration du module Emprunt
 LOAN_ACCOUNTING_ACCOUNT_CAPITAL=Compte comptable à utiliser par défaut pour le capital (module emprunt)
