--- a/htdocs/langs/en_US/bills.lang
+++ b/htdocs/langs/en_US/bills.lang
@@ -401,7 +401,7 @@ DateLastGenerationShort=Date latest gen.
 MaxPeriodNumber=Max. number of invoice generation
 NbOfGenerationDone=Number of invoice generation already done
 NbOfGenerationOfRecordDone=Number of record generation already done
-NbOfGenerationDoneShort=Number of generation done
+NbOfGenerationDoneShort=Number of generations done
 MaxGenerationReached=Maximum number of generations reached
 InvoiceAutoValidate=Validate invoices automatically
 GeneratedFromRecurringInvoice=Generated from template recurring invoice %s
