--- a/htdocs/langs/en_US/users.lang
+++ b/htdocs/langs/en_US/users.lang
@@ -131,4 +131,4 @@ IPPreviousLogin=IP previous login
 ShowAllPerms=Show all permission rows
 HideAllPerms=Hide all permission rows
 UserPublicPageDesc=You can enable a virtual card for this user. An url with the user profile and a barcode will be available to allow anybody with a smartphone to scan it and add your contact to its address book.
-EnablePublicVirtualCard=Enable the public virtual user card
+EnablePublicVirtualCard=Enable the user's virtual business card
