Add 2 entries for DispatchedLines on Delete

--- a/htdocs/langs/en_US/orders.lang
+++ b/htdocs/langs/en_US/orders.lang
@@ -206,3 +206,5 @@ StatusSupplierOrderReceivedPartially=Partially received
 StatusSupplierOrderReceivedAll=All products received
 NeedAtLeastOneInvoice = There has to be at least one Invoice
 LineAlreadyDispatched = The order line is already received.
+ExistingDipatchLinesWillBeRemoved = There are dispatched lines. They will be deleted.
+SupplierOrderDeletion = Supplier order %s Deletion
