--- a/htdocs/langs/fr_FR/compta.lang
+++ b/htdocs/langs/fr_FR/compta.lang
@@ -29,6 +29,8 @@ BalanceBefore=Solde (avant)
 Balance=Solde
 Debit=Débit
 Credit=Crédit
+AccountingDebit=Débit
+AccountingCredit=Crédit
 Piece=Pièce
 AmountHTVATRealReceived=HT collectée
 AmountHTVATRealPaid=HT payé
