--- a/htdocs/langs/fr_FR/admin.lang
+++ b/htdocs/langs/fr_FR/admin.lang
@@ -2360,7 +2360,7 @@ Images=Images
 MaxNumberOfImagesInGetPost=Nombre maximum d'images autorisées dans un champ HTML soumis dans un formulaire
 MaxNumberOfPostOnPublicPagesByIP=Nombre maximum de publications sur des pages publiques avec la même adresse IP en un mois
 CIDLookupURL=Le module apporte une URL qui peut être utilisée par un outil externe pour obtenir le nom d'un tiers ou d'un contact à partir de son numéro de téléphone. L'URL à utiliser est :
-ScriptIsEmpty=Le script est manquant
+ScriptIsEmpty=Le script est vide
 ShowHideTheNRequests=Afficher/Cacher les %s requête(s) SQL.
 DefinedAPathForAntivirusCommandIntoSetup=Définir un chemin pour un programme antivirus dans <b> %s </b>
 TriggerCodes=Événements déclenchables
