--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -1232,3 +1232,4 @@ UploadFileDragDropSuccess=The file(s) have been uploaded successfully
 SearchSyntaxTooltipForStringOrNum=For searching inside text fields, you can use the characters ^ or $ to make a 'start or end with' search or use the ! to make a 'does not contain' test. You can use the | between two strings instead of a space for a 'OR' condition instead of 'AND'. For numeric values, you can use the operator <, >, <=, >= or != before the value, to filter using a mathematical comparison
 InProgress=In progress
 DateOfPrinting=Date of printing
+ClickFullScreenEscapeToLeave=Click here to swith in Full screen mode. Type ESCAPE to leave Full screen mode.
