New|NEW new option for hide the footer of tickets on the public interface

--- a/htdocs/langs/fr_FR/ticket.lang
+++ b/htdocs/langs/fr_FR/ticket.lang
@@ -128,6 +128,8 @@ TicketsShowModuleLogo=Afficher le logo du module dans l'interface publique
 TicketsShowModuleLogoHelp=Activer cette option pour cacher le logo du module dans les pages de l'interface publique
 TicketsShowCompanyLogo=Afficher le logo de la société dans l'interface publique
 TicketsShowCompanyLogoHelp=Activez cette option pour masquer le logo de la société dans les pages de l'interface publique
+TicketsShowCompanyFooter=Afficher le pied de page de l'entreprise dans l'interface publique
+TicketsShowCompanyFooterHelp=Activez cette option pour masquer le pied de la page de la société dans les pages de l'interface publique
 TicketsEmailAlsoSendToMainAddress=Envoyer également une notification à l'adresse e-mail principale
 TicketsEmailAlsoSendToMainAddressHelp=Activer cette option pour envoyer aussi un email à l'adresse définie dans la configuration "%s" (Voir onglet "%s")
 TicketsLimitViewAssignedOnly=Limiter l'afficher des tickets assignés à l'utilisateur courant (non valable pour les utilisateurs externes, toujours limité par le tiers dont ils dépendent)
