--- a/htdocs/langs/en_US/languages.lang
+++ b/htdocs/langs/en_US/languages.lang
@@ -123,6 +123,6 @@ Language_ur_PK=Urdu
 Language_uz_UZ=Uzbek
 Language_vi_VN=Vietnamese
 Language_zh_CN=Chinese
-Language_zh_TW=Chinese (Traditional)
+Language_zh_TW=Chinese (Taiwan)
 Language_zh_HK=Chinese (Hong Kong)
 Language_bh_MY=Malay
