--- a/htdocs/langs/en_US/banks.lang
+++ b/htdocs/langs/en_US/banks.lang
@@ -60,7 +60,7 @@ EditFinancialAccount=Edit account
 LabelBankCashAccount=Bank or cash label
 AccountType=Account type
 BankType0=Savings account
-BankType1=Current or credit card account
+BankType1=Current, cheque or credit card account
 BankType2=Cash account
 AccountsArea=Accounts area
 AccountCard=Account card
