--- a/htdocs/langs/en_US/stocks.lang
+++ b/htdocs/langs/en_US/stocks.lang
@@ -321,3 +321,5 @@ BatchNotFound=Lot / serial not found for this product
 StockMovementWillBeRecorded=Stock movement will be recorded
 StockMovementNotYetRecorded=Stock movement will not be affected by this step
 WarningThisWIllAlsoDeleteStock=Warning, this will also destroy all quantities in stock in the warehouse
+DeleteBatch=Delete lot/serial
+ConfirmDeleteBatch=Are you sure you want to delete lot/serial ?
