--- a/htdocs/langs/en_US/stocks.lang
+++ b/htdocs/langs/en_US/stocks.lang
@@ -239,7 +239,7 @@ InventoryForASpecificWarehouse=Inventory for a specific warehouse
 InventoryForASpecificProduct=Inventory for a specific product
 StockIsRequiredToChooseWhichLotToUse=An existing stock is required to be able to choose which lot to use
 ForceTo=Force to
-AlwaysShowFullArbo=Display full tree of warehouse on popup of warehouse links (Warning: This may decrease dramatically performances)
+AlwaysShowFullArbo=Display the full path of a warehouse (parent warehouses) on the popup of warehouse links (Warning: This may decrease dramatically performances)
 StockAtDatePastDesc=You can view here the stock (real stock) at a given date in the past
 StockAtDateFutureDesc=You can view here the stock (virtual stock) at a given date in the future
 CurrentStock=Current stock
