--- a/htdocs/langs/en_US/users.lang
+++ b/htdocs/langs/en_US/users.lang
@@ -99,7 +99,7 @@ YourRole=Your roles
 YourQuotaOfUsersIsReached=Your quota of active users is reached !
 NbOfUsers=Number of users
 NbOfPermissions=Number of permissions
-DontDowngradeSuperAdmin=Only a superadmin can downgrade a superadmin
+DontDowngradeSuperAdmin=Only another admin can downgrade an admin
 HierarchicalResponsible=Supervisor
 HierarchicView=Hierarchical view
 UseTypeFieldToChange=Use field Type to change
