--- a/htdocs/langs/fr_FR/users.lang
+++ b/htdocs/langs/fr_FR/users.lang
@@ -99,7 +99,7 @@ YourRole=Vos rôles
 YourQuotaOfUsersIsReached=Votre quota d'utilisateurs actifs est atteint !
 NbOfUsers=Nombre d'utilisateurs
 NbOfPermissions=Nombre de permissions
-DontDowngradeSuperAdmin=Seul un superadministrateur peut rétrograder un superadministrateur
+DontDowngradeSuperAdmin=Seul un autre administrateur peut rétrograder un administrateur
 HierarchicalResponsible=Responsable hiérarchique
 HierarchicView=Vue hiérarchique
 UseTypeFieldToChange=Modifier le champ Type pour changer
