--- a/htdocs/langs/en_US/dict.lang
+++ b/htdocs/langs/en_US/dict.lang
@@ -137,7 +137,7 @@ CountryLV=Latvia
 CountryLB=Lebanon
 CountryLS=Lesotho
 CountryLR=Liberia
-CountryLY=Libyan
+CountryLY=Libya
 CountryLI=Liechtenstein
 CountryLT=Lithuania
 CountryLU=Luxembourg
