New|NEW(#25044) new option for choose project visibility

--- a/htdocs/langs/en_US/website.lang
+++ b/htdocs/langs/en_US/website.lang
@@ -157,3 +157,6 @@ Booking=Booking
 Reservation=Reservation
 PagesViewedPreviousMonth=Pages viewed (previous month)
 PagesViewedTotal=Pages viewed (total)
+Visibility=Visibility
+Everyone=Everyone
+AssignedContacts=Assigned contacts
