--- a/htdocs/langs/fr_FR/website.lang
+++ b/htdocs/langs/fr_FR/website.lang
@@ -157,3 +157,6 @@ Booking=Réservation
 Reservation=Réservation
 PagesViewedPreviousMonth=Pages vues (mois précédent)
 PagesViewedTotal=Pages vues (total)
+Visibility=Visibilité
+Everyone=Tout le monde
+AssignedContacts=Contacts assignés
