--- a/htdocs/langs/en_US/ecm.lang
+++ b/htdocs/langs/en_US/ecm.lang
@@ -48,7 +48,7 @@ GenerateImgWebp=Duplicate all images with another version with .webp format
 ConfirmGenerateImgWebp=If you confirm, you will generate an image in .webp format for all images currently into this folder (subfolders are not included)...
 ConfirmImgWebpCreation=Confirm all images duplication
 GenerateChosenImgWebp=Duplicate chosen image with another version with .webp format
-ConfirmGenerateChosenImgWebp=If you confirm, you will generate an image in .webp format for the image
+ConfirmGenerateChosenImgWebp=If you confirm, you will generate an image in .webp format for the image %s
 ConfirmChosenImgWebpCreation=Confirm chosen images duplication
 SucessConvertImgWebp=Images successfully duplicated
 SucessConvertChosenImgWebp=Chosen image successfully duplicated
