New 24318 Add Rotate_Image_Button in Preview (#25052)

--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -556,6 +556,7 @@ Unknown=Unknown
 General=General
 Size=Size
 OriginalSize=Original size
+RotateImage=Rotate 90°
 Received=Received
 Paid=Paid
 Topic=Subject
