--- a/htdocs/langs/fr_FR/main.lang
+++ b/htdocs/langs/fr_FR/main.lang
@@ -555,6 +555,7 @@ Unknown=Inconnu
 General=Général
 Size=Taille
 OriginalSize=Taille d'origine
+RotateImage=Rotation 90°
 Received=Reçu
 Paid=Payé
 Topic=Sujet
