--- a/htdocs/langs/fr_FR/modulebuilder.lang
+++ b/htdocs/langs/fr_FR/modulebuilder.lang
@@ -179,3 +179,4 @@ CRUDRead=Lire
 CRUDCreateWrite=Créer ou mettre à jour
 FailedToAddCodeIntoDescriptor=Échec de l'ajout de code dans le descripteur. Vérifiez que le commentaire de chaîne "%s" est toujours présent dans le fichier.
 DictionariesCreated = Le dictionnaire <b>%s</b> a été créé avec succès
+DictionaryDeleted=Le dictionnaire <b>%s</b> a été supprimé avec succès
