NEW Add modifications of template invoices into agenda

--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -235,6 +235,8 @@ PersonalValue=Personal value
 NewObject=New %s
 NewValue=New value
 OldValue=Old value %s
+FieldXModified=Field %s modified
+FieldXModifiedFromYToZ=Field %s modified from %s to %s
 CurrentValue=Current value
 Code=Code
 Type=Type
