--- a/htdocs/langs/en_US/modulebuilder.lang
+++ b/htdocs/langs/en_US/modulebuilder.lang
@@ -180,3 +180,4 @@ CRUDCreateWrite=Create or Update
 FailedToAddCodeIntoDescriptor=Failed to add code into descriptor. Check that the string comment "%s" is still present into the file.
 DictionariesCreated=Dictionary <b>%s</b> created successfully
 DictionaryDeleted=Dictionary <b>%s</b> removed successfully
+PropertyModuleUpdated=Property <b>%s</b> has been update successfully
