--- a/htdocs/langs/en_US/banks.lang
+++ b/htdocs/langs/en_US/banks.lang
@@ -106,7 +106,8 @@ BankLineNotReconciled=Not reconciled
 CustomerInvoicePayment=Customer payment
 SupplierInvoicePayment=Vendor payment
 SubscriptionPayment=Subscription payment
-WithdrawalPayment=Debit payment order
+WithdrawalPayment=Direct Debit payment
+BankTransferPayment=Credit Transfer payment
 SocialContributionPayment=Social/fiscal tax payment
 BankTransfer=Credit transfer
 BankTransfers=Credit transfers
