--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -1508,7 +1508,8 @@ WatermarkOnDraftContractCards=Watermark on draft contracts (none if empty)
 MembersSetup=Members module setup
 MemberMainOptions=Main options
 MemberCodeChecker=Options for automatic generation of member codes
-AdherentLoginRequired= Manage a Login for each member
+AdherentLoginRequired=Manage a login/password for each member
+AdherentLoginRequiredDesc=Add a value for a login and a password on the member file. If the member is linked to a user, updating the member login and password will also update the user login and password.
 AdherentMailRequired=Email required to create a new member
 MemberSendInformationByMailByDefault=Checkbox to send mail confirmation to members (validation or new subscription) is on by default
 MemberCreateAnExternalUserForSubscriptionValidated=Create an external user login for each new member subscription validated
