--- a/ChangeLog
+++ b/ChangeLog
@@ -19,8 +19,8 @@ Following changes may create regressions for some external modules, but were nec
 For uses:
 ---------
 
-NEW: PHP 8.2 compatibility (test not yet completed).
-NEW: Module Workstations Management upgraded to stable status.
+NEW: PHP 8.2 compatibility (test not yet completed)
+NEW: Module Workstations Management upgraded to stable status
 NEW: Module Webhook upgraded to stable status
 NEW: #23436 Group social networks fields
 NEW: Accountancy - Add specific page to export accounting data rather than the journals page
@@ -31,16 +31,15 @@ NEW: Accountancy - iSuiteExpert export model
 NEW: Accountancy - Quadratus export with attachments in accountancy export
 NEW: Accountancy - Can filter on a custom group of accounts. Perf or ledger list.
 NEW: Accountancy - Can select the export format during export of journals
+NEW: Accountancy - sort of column of custom group of account
 NEW: Can upload a file with drag and drop on purchase invoice, vats, salaries and social contributions 
 NEW: Authentication: #22740 add OpenID Connect impl
 NEW: Authentication: add experimental support for Google OAuth2 connexion
 NEW: Authentication: can now edit service name for OAuth token
-NEW: Add a status on supplier price ref (WIP to close a supplier ref)
 NEW: add bookmarks in selectable landing pages for users
 NEW: Add column ext_payment_site into societe_rib to allow multiple payment mode
 NEW: add convertion of images to webp for a single image in website media editor
 NEW: Add CRC for currency symbol before amount
-NEW: add customer code to invoices listing
 NEW: Add filter on nb of generation done in list of recurring invoices
 NEW: Add filters and sort on product unit column
 NEW: Add link to edit VAT list from error message of missing VAT
@@ -48,10 +47,11 @@ NEW: add margins in paiement/card.php
 NEW: Add mass action delete on VAT
 NEW: Add possibility to choose format #21426
 NEW: An external module can modify the quick search fields
-NEW: Bank: Bank name no more mandatory on creation. Can be generated if empty.
-NEW: Bank: Add fields zip, town, country for owner of a bank account
+NEW: Bank:  Bank name no more mandatory on creation. Can be generated if empty.
+NEW: Bank:  Add fields zip, town, country for owner of a bank account
 NEW: batch referential objets
 NEW: Can add the add now link on date into addfieldvalue()
+NEW: Can add an array of several links in date selector
 NEW: Can bin accounting line for a given month
 NEW: Can edit inline the VAT number from supplier tab
 NEW: Can go back to draft on shipment when stock change not on validate
@@ -75,13 +75,11 @@ NEW: Email-Collector: add field reply-to in email collector as possible filter
 NEW: Email-Collector: substitute date now in email collector
 NEW: Email-Collector: operation type in email collector to load or create contact
 NEW: Email-Collector: easier setup - can also use ! for negative search
+NEW: Email-Templates: show module into list of email templates
 NEW: Events: can add any contact on events if global MAIN_ACTIONCOM_CAN_ADD_ANY_CONTACT is set at 1
 NEW: Events: list with color
 NEW: Events: remove default percentage for event creation url
-NEW: expend/collapse list of social networks
-NEW: Filter on amount and qty on list of service's contracts
 NEW: formconfirm can support field with format datetime
-NEW: getCommonSubstitutionArray to have more substitute keys
 NEW: GeoIP: Can test a geoip conversion from the geoip setup page
 NEW: GUI: add a CSS editor into the admin GUI
 NEW: GUI: add dropdown button actions (example on Create button on project)
@@ -101,6 +99,7 @@ NEW: Import: map table to element for get entity in import
 NEW: inc.php: handle parameters from argv
 NEW: Installation: Auto activate some modules on install (Export/Import/Wysiwyg editor)
 NEW: Invoice: show category of operations
+NEW: Invoice: add customer code to invoices listing
 NEW: Keep a link between user created from recruitment and application
 NEW: Mass Actions: Better responsive for mass actions
 NEW: Members: add numbering modules for members
@@ -135,7 +134,7 @@ NEW: Print PDF: Option PDF_SHOW_EMAIL_AFTER_USER_CONTACT to show email after spe
 NEW: product images on popup are cached
 NEW: Products: Add origin info when create a product batch when created from a movement stock
 NEW: Products: Add statistics by amount on statistics of products.
-NEW: Products: Add SQL contraint on product_stock table to allow only exsting product and warehouse #23543
+NEW: Products: Add SQL contraint on product_stock table to allow only existing product and warehouse #23543
 NEW: Proposals: filter for Signed+Billed in proposals
 NEW: Proposals: can modify margin rates in offers like VAT rates
 NEW: Proposals: option filter for NoSalesRepresentativeAffected in proposals list
@@ -144,23 +143,22 @@ NEW: Reception: can receive more than qty ordered on reception
 NEW: referential objects of batch
 NEW: remove keys whose table element is the same as element in map list
 NEW: repair script skip views
+NEW: search on time spent duration range
 NEW: Security: Save date to invalidate other session into user table
 NEW: Security: Invalidate all sessions of a user when password is modified.
-NEW: search on time spent duration range
-NEW: set payment default values when supplier order created from reception
+NEW: Service Contracts: Filter on amount and qty on list of service's contracts
 NEW: set today start time at beginning
-NEW: Show counter of access of website in website list
 NEW: Show main currency in company info user tooltip
-NEW: Show module into list of emails templates
-NEW: Show picto into the combobox of widgets
 NEW: Show supplier invoice ref of direct debit transfer tab invoices
-NEW: show supplier name in getNomUrl of supplier order
-NEW: sort of column of custom group of account
-NEW: Supplier Invoices: add ability of ODT support to supplier invoices
+NEW: Social Networks: expend/collapse list of social networks
 NEW: Stock limit for alert and desired optimal stock by product and warehouse import
 NEW: Stock: Add warehouse create and modify triggers.
 NEW: Stock: Can select several warehouses into the view stock at date in past
 NEW: Stripe: add STRIPE_DEBUG, a way to log Stripe IPN
+NEW: Supplier Invoices: add ability of ODT support to supplier invoices
+NEW: Supplier Order:  show supplier name in getNomUrl of supplier order
+NEW: Supplier Order:  set payment default values when supplier order created from reception
+NEW: Supplier Price:  Add a status on supplier price ref (WIP to close a supplier ref)
 NEW: Support different bank account for several direct debit payments
 NEW: Support multiselect in the warehouse selection combo box
 NEW: Survey: Comment on survey is possible only after vote.
@@ -180,8 +178,8 @@ NEW: Use by default the domain $dolibarr_main_url_root for SMTP HELO
 NEW: Users: add a public virtual card page for each user
 NEW: VAT can be modified during add of line
 NEW: Website Module: Increment website counter on each page access in website module
-NEW: write all fields and their properties in asciidoc format
-NEW: Can add an array of several links in date selector
+NEW: Website Module: Show counter of access of website in website list
+NEW: Widgets: Show picto into the combobox of widgets
 NEW: Widgets: Implement MAIN_ACTIVATE_FILECACHE on birthday widget
 NEW: Widgets: Add widget "The next upcoming events"
 NEW: Widgets: Add widget of open opportunities
@@ -199,12 +197,14 @@ NEW: add helplist property to describe fields of objects
 NEW: API: Support contact in post() document API
 NEW: API: more APIs (update currency rate, upload of supplier documents, ...)
 NEW: Hooks: printFieldListFrom in contact list
-NEW: Hooks: add hook in loadLotStock() in html.formproduct.class.php file, add hook 'llxFooter', add hook online sign
+NEW: Hooks: add hook in loadLotStock() in html.formproduct.class.php file
+NEW: Hooks: add hook 'llxFooter'
+NEW: Hooks: add hook online sign
+NEW: Hooks: add sent info in the parameters provided to the hook sendMailAfter
 NEW: Libraries: Update libs parsedownto 1.7.4, phpspreadsheet lib to v1.12, ESCPOS v3.0, jquery, Stripe.
 NEW: ModuleBuilder: updating in modulbuilder on tab Menu when adding object
 NEW: ModuleBuilder: add/edit permissions
 NEW: ModuleBuilder: better generated documentation
-NEW: add sent info in the parameters provided to the hook sendMailAfter
 NEW: add setAsSelectUser into factory for generic setup page
 NEW: add option keepspace into dol_string_nospecialchar()
 NEW: dol_sort_array can sort on alphabetical order even if val is num
@@ -212,6 +212,8 @@ NEW: dolExplodeIntoArray can accept regex
 NEW: element time integration code + SQL
 NEW: tables: llx_element_time to store time spent on several elements (mo, ticket...)
 NEW: Provide the oldcopy value when calling setValueFrom() function with a trigger key
+NEW: getCommonSubstitutionArray to have more substitute keys
+NEW: write all fields and their properties in asciidoc format
 
 
 WARNING:
