add constant to check if qty shipped not greater than qty ordered

--- a/htdocs/langs/en_US/sendings.lang
+++ b/htdocs/langs/en_US/sendings.lang
@@ -79,3 +79,5 @@ ShipmentDistribution=Shipment distribution
 
 ErrorTooManyCombinationBatchcode=No dispatch for line %s as too many combination warehouse, product, batch code was found (%s).
 ErrorNoCombinationBatchcode=No dispatch for line %s as no combination warehouse, product, batch code was found.
+
+ErrorTooMuchShipped=Quantity shipped should not be greater than quantity ordered for line %s
