--- a/htdocs/langs/en_US/admin.lang
+++ b/htdocs/langs/en_US/admin.lang
@@ -2077,6 +2077,10 @@ MAIN_DOCUMENTS_LOGO_HEIGHT=Height for logo on PDF
 DOC_SHOW_FIRST_SALES_REP=Show first sales representative
 MAIN_GENERATE_PROPOSALS_WITH_PICTURE=Add column for picture on proposal lines
 MAIN_DOCUMENTS_WITH_PICTURE_WIDTH=Width of the column if a picture is added on lines
+MAIN_GENERATE_DOCUMENTS_SUPPLIER_PROPOSAL_WITHOUT_UNIT_PRICE=Hide the unit price column on quotation requests
+MAIN_GENERATE_DOCUMENTS_SUPPLIER_PROPOSAL_WITHOUT_TOTAL_COLUMN=Hide the total price column on quotation requests
+MAIN_GENERATE_DOCUMENTS_PURCHASE_ORDER_WITHOUT_UNIT_PRICE=Hide the unit price column on purchase orders
+MAIN_GENERATE_DOCUMENTS_PURCHASE_ORDER_WITHOUT_TOTAL_COLUMN=Hide the total price column on puchase orders
 MAIN_PDF_NO_SENDER_FRAME=Hide borders on sender address frame
 MAIN_PDF_NO_RECIPENT_FRAME=Hide borders on recipent address frame
 MAIN_PDF_HIDE_CUSTOMER_CODE=Hide customer code
