When creating a mandate on SEPA Stripe, we save stripe mandate ID

--- a/htdocs/langs/en_US/withdrawals.lang
+++ b/htdocs/langs/en_US/withdrawals.lang
@@ -115,7 +115,7 @@ RUM=UMR
 DateRUM=Mandate signature date
 RUMLong=Unique Mandate Reference
 RUMWillBeGenerated=If empty, a UMR (Unique Mandate Reference) will be generated once the bank account information is saved.
-WithdrawMode=Direct debit mode (FRST or RECUR)
+WithdrawMode=Direct debit mode (FRST or RCUR)
 WithdrawRequestAmount=Amount of Direct debit request:
 BankTransferAmount=Amount of Credit Transfer request:
 WithdrawRequestErrorNilAmount=Unable to create direct debit request for empty amount.
@@ -131,6 +131,7 @@ SEPAFormYourBAN=Your Bank Account Name (IBAN)
 SEPAFormYourBIC=Your Bank Identifier Code (BIC)
 SEPAFrstOrRecur=Type of payment
 ModeRECUR=Recurring payment
+ModeRCUR=Recurring payment
 ModeFRST=One-off payment
 PleaseCheckOne=Please check one only
 CreditTransferOrderCreated=Credit transfer order %s created
