--- a/htdocs/langs/en_US/main.lang
+++ b/htdocs/langs/en_US/main.lang
@@ -949,7 +949,7 @@ BulkActions=Bulk actions
 ClickToShowHelp=Click to show tooltip help
 WebSite=Website
 WebSites=Websites
-WebSiteAccounts=Website accounts
+WebSiteAccounts=Web access accounts
 ExpenseReport=Expense report
 ExpenseReports=Expense reports
 HR=HR
